# centrifuge-rs

./: .gitignore  Cargo.toml  README.md  build.rs
proto/: client.proto
src/: client.rs  error.rs  lib.rs  main.rs  protocol.rs  transport.rs
