[package]
edition = "2018"
name = "centrifuge-rs"
version = "0.1.0"

[dependencies]
async-tungstenite = {version="0.16", features = ["tokio-runtime"]}
http = "0.2"
prost = "0.9.0"
thiserror = "*"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tokio = {version="1.0", features = ["rt", "net", "rt-multi-thread", "time", "macros"]}
futures = "0.3"
lazy_static = "1.0"

[build-dependencies]
prost-build = { version = "0.9.0" }

[[bin]]
name="main"
path = "src/main.rs"
test = false
bench = false